--- a/06/style.css
+++ b/06/style.css
@@ -60,13 +60,12 @@ body {
     line-height: 1;
     color: #ffffff;
     margin: 0 0;
-    position: absolute;
 }
 .banner__content-container p {
     font-size: 16px;
+    font-weight: 300;
     line-height: 1.5;
     color: #ffffff;
-    margin: 0 0 25px;
 }
 .banner__content-container button {
     border: none;
@@ -84,23 +83,68 @@ body {
 .banner__content-container button:hover {
     background: #f9d100;
 }
+.banner__content-container button:active {
+    background: #ffdd2d;
+    color: #777;
+}
 .banner__card-img-container {
     width: 50%;
-    overflow: visible;
-    top: 0;
-    bottom: 0;
     background-repeat: no-repeat;
     background-position: -37px -87px;
     background-image: url('https://egdeliya.github.io/Fintech-Javascript/05/02/img/cards.png');
 }
-/* headers code */
-.headers {
+/* ------------------ tags ----------------- */
+.tags {
     width: 829px;
-    margin: 82px 67px;
-    /* margin-top: 82px; */
-    /* margin-bottom: 67px; */
-    font-weight: 300;
+    margin: auto;
+    margin-top: 82px;
+    margin-bottom: 76px;
 }
-.headers__title {
-    margin: 0 0;
+.tags__title {
+    font-family: Roboto;
+    font-size: 50px;
+    font-weight: 300;
+    text-align: center;
+    color: #333333;
+}
+.tags__container {
+    /* height: 132px; */
+    border-radius: 6px;
+    padding: 18px;
+    border: solid 1px #dddfe0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    box-sizing: border-box;
+}
+.tags__content {
+    height: 42px;
+    border-radius: 6px;
+    border: none;
+    display: flex;
+    max-width: 300px;
+    white-space: nowrap;
+    margin-right: 12px;
+    margin-bottom: 12px;
+    padding: 11px;
+    flex-direction: row;
+    background-color: #eef2f7;
+    align-items: center;
+    box-sizing: border-box;
+}
+.tags__content text {
+    height: 15px;
+    font-size: 13px;
+    overflow: hidden;
+    margin-right: 11px;
+    background: linear-gradient(to right, #333333, #5a5a5a 220px, #eef2f7);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.delete-svg {
+    width: 11px;
+    height: 11px;
+    object-fit: contain;
 }
