--- a/06/style.css
+++ b/06/style.css
@@ -30,7 +30,7 @@ body {
 }
 .nav__item a {
     display: flex;
-    height: 15px;
+    line-height: 15px;
     font-size: 13px;
     white-space: nowrap;
     letter-spacing: 0.9px;
@@ -108,7 +108,6 @@ body {
     color: #333333;
 }
 .tags__container {
-    /* height: 132px; */
     border-radius: 6px;
     padding: 18px;
     border: solid 1px #dddfe0;
@@ -147,4 +146,183 @@ body {
     width: 11px;
     height: 11px;
     object-fit: contain;
+}
+/* ---------------- form code ------------------ */
+.form {
+    width: 540px;
+    margin: auto;
+    margin-top: 76px;
+    margin-bottom: 57px;
+}
+.form__title {
+    font-family: Roboto;
+    font-size: 50px;
+    font-weight: 300;
+    line-height: 1.08;
+    text-align: center;
+    color: #333333;
+}
+.form__content {
+    display: flex;
+    flex-direction: column;
+    margin-top: 0px;
+    align-items: stretch;
+}
+.form__content div {
+    height: 66px;
+    display: flex;
+    flex-direction: row;
+    border-radius: 6px;
+    border: none;
+    background-color: #eef2f7;
+    position: relative;
+    justify-content: space-between;
+    /* align-content: center; */
+    box-sizing: border-box;
+}
+.form__content div:nth-child(1):focus {
+    background: #0000;
+    border: solid 1px #d0011b;
+}
+.form__input {
+    font-size: 17px;
+    font-family: Roboto;
+    color: #333333;
+    border: none;
+    outline: none;
+    width: 100%;
+    margin-left: 20px;
+    background: none;
+}
+.form__input:focus ~ .form__label {
+    top: 10%;
+    font-size: 13px;
+}
+.form__label {
+    /* margin: auto; */
+    position: absolute;
+    pointer-events: none;
+    color: #74a3c7;
+    font-size: 17px;
+    margin-left: 20px;
+    top: 35%;
+    transition: 0.2s ease;
+}
+.content-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.form-select-field {
+    border: none;
+    height: 20px;
+    font-family: 'Roboto', Arial, sans-serif;
+    font-size: 17px;
+    color: #333333;
+    background: none;
+    display: flex;
+    align-self: flex-end;
+}
+.form-input-field {
+    border: none;
+    height: 20px;
+    font-family: 'Roboto', Arial, sans-serif;
+    font-size: 17px;
+    color: #333333;
+    background: none;
+}
+.form-label {
+    height: 15px;
+    font-family: 'Roboto', Arial, sans-serif;
+    font-size: 13px;
+    color: #74a3c7;
+}
+.message-label {
+    height: 15px;
+    font-family: 'Roboto', Arial, sans-serif;
+    font-size: 13px;
+    color: #d0021b;
+    margin-bottom: 24px;
+}
+.choose-container {
+    width: 245px;
+    height: 24px;
+    font-family: Roboto;
+    display: flex;
+    margin: auto;
+    font-size: 21px;
+    font-weight: 300;
+    text-align: center;
+    color: #333333;
+}
+.blocks-element {
+    height: 66px;
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+}
+.block-container {
+    width: 258px;
+    height: 66px;
+    display: flex;
+    padding: 18px;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 6px;
+    background-color: #ffffff;
+    border: solid 1px #dddfe0;
+    box-sizing: border-box;
+}
+.block-container-text {
+    width: 57px;
+    height: 20px;
+    opacity: 0.6;
+    font-family: 'Roboto', Arial, sans-serif;
+    font-size: 17px;
+    color: #74a3c7;
+}
+.last-block-container {
+    width: 258px;
+    height: 66px;
+    border-radius: 6px;
+    display: flex;
+    margin: auto;
+    align-self: center;
+    margin-bottom: 57px;
+    margin-top: 49px;
+    box-sizing: border-box;
+    background-color: #ffdd2d;
+}
+.last-block-content {
+    height: 20px;
+    display: flex;
+    margin: auto;
+    font-family: 'Roboto', Arial, sans-serif;
+    font-size: 17px;
+    color: #333333;
+}
+.exclamation-svg {
+    margin-left: auto;
+    width: 24px;
+    height: 24px;
+    object-fit: contain;
+}
+.question-svg {
+    width: 24px;
+    height: 24px;
+    object-fit: contain;
+    margin-left: auto;
+}
+.radio-active-svg {
+    width: 30px;
+    height: 30px;
+    object-fit: contain;
+    margin-left: auto;
+}
+.radio-svg {
+    width: 30px;
+    height: 30px;
+    object-fit: contain;
+    background-color: #eef2f7;
+    margin-left: auto;
 }
