--- a/06/mobile.css
+++ b/06/mobile.css
@@ -1,9 +1,9 @@
 body {
   margin: auto;
-  max-width: 1080px;
   font-family: 'Roboto';
 }
 
+/* ----- header ------ */
 .header {
   height: 95px;
   display: flex;
@@ -15,70 +15,48 @@ body {
 }
 
 .header span {
-  max-width: 173px;
-  font-family: Roboto;
-  font-size: 21px;
+  max-width: 140px;
+  height: 20px;
+  font-size: 17px;
+  text-align: right;
   color: #333;
 }
 
 /* --------------- navigation bar code ------------- */
 .nav {
-  margin: auto;
-  height: 65px;
-  padding-left: 10%;
-  padding-right: 10%;
-  background-color: #3e4757;
-  text-transform: uppercase;
-  display: flex;
-  justify-content: space-between;
-  box-sizing: border-box;
-}
-
-.nav__item {
-  display: flex;
-  align-items: center;
-  border-bottom: 3px solid #3e4757;
-  transition-property: border-bottom-color;
-  transition-duration: 2s;
-}
-
-.nav__item:hover {
-  border-bottom-color: #ffdd2d;
-}
-
-.nav__item a {
-  display: flex;
-  line-height: 15px;
-  font-size: 2.1vmin;
-  white-space: nowrap;
-  letter-spacing: 0.9px;
-  color: #fff;
-  text-decoration: none;
+  display: none !important;
 }
 
 /* ------------- banner code -------------- */
 .banner {
   margin: auto;
-  display: flex;
-  flex-direction: row;
-  max-width: 1080px;
-  height: 413px;
-  background-image: linear-gradient(to right, #1489e7, #003e82);
+  height: 390px;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(to bottom, #168de7, #00428a);
+}
+
+.banner__card-img-container {
+  display: none;
 }
 
 .banner__content-container {
-  margin-left: 14px;
-  margin-top: 91px;
-  margin-bottom: 74px;
-  width: 36%;
-  box-sizing: border-box;
-  position: relative;
+  width: 100% !important;
+  margin: 0 !important;
+  display: block;
+  align-items: center;
+  padding: 8% 10%;
+  background-repeat: no-repeat;
+  background-size: 110% 110%;
+  justify-content: flex-start;
+  background-position: top 100px left -9px;
+  background-image: url('https://egdeliya.github.io/Fintech-Javascript/05/02/img/cards.png');
 }
 
 .banner__content-container h1 {
-  font-size: 50px;
+  font-size: 20vmin;
+  line-height: 1.2;
+  text-align: center;
   font-weight: 100;
-  line-height: 1;
   color: #fff;
   margin: 0;
 }
@@ -87,21 +65,26 @@ body {
   font-size: 16px;
   font-weight: 300;
   line-height: 1.5;
+  width: 100%;
+  text-align: center;
   color: #fff;
+  margin-top: 2px;
+  margin-bottom: 30%;
 }
 
 button {
   border: none;
   white-space: nowrap;
-  height: 62px;
+  min-height: 62px;
   border-radius: 6px;
-  padding: 20px 35px;
+  width: 100%;
   background-color: #ffdd2d;
   font-family: 'Roboto';
   font-size: 17px;
   text-align: center;
   color: #333;
   cursor: pointer;
+  outline: none;
   margin-bottom: 5px;
 }
 
@@ -114,32 +97,29 @@ button:active {
   color: #777;
 }
 
-.banner__card-img-container {
-  width: 50%;
-  background-repeat: no-repeat;
-  background-position: right 0 top -80px;
-  background-image: url('https://egdeliya.github.io/Fintech-Javascript/05/02/img/cards.png');
-}
-
 /* ------------------ tags ----------------- */
 .tags {
-  max-width: 829px;
+  max-width: 640px;
   margin: auto;
+  padding-right: 3%;
+  padding-left: 3%;
   margin-top: 82px;
   margin-bottom: 76px;
 }
 
 .tags__title {
-  font-family: Roboto;
-  font-size: 50px;
   font-weight: 300;
   text-align: center;
   color: #333;
+  font-size: 0.2vmin;
+  line-height: 1.2;
+  margin: 0;
 }
 
 .tags__container {
   border-radius: 6px;
   padding: 18px;
+  margin-top: 24px;
   border: solid 1px #dddfe0;
   display: flex;
   flex-direction: row;
@@ -187,25 +167,27 @@ button:active {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  max-width: 540px;
   margin: auto;
-  margin-top: 76px;
+  max-width: 640px;
+  padding-right: 3%;
+  padding-left: 3%;
+  margin-top: 52px;
 }
 
 .form__title {
   font-family: Roboto;
-  font-size: 50px;
   font-weight: 300;
   line-height: 1.08;
+  margin: 0;
   text-align: center;
   color: #333;
+  font-size: 24px;
 }
 
 .form__items {
   display: flex;
   flex-direction: column;
-  margin-top: 0px;
-  align-items: stretch;
+  margin-top: 26px !important;
 }
 
 .form__item {
@@ -217,6 +199,7 @@ button:active {
   border: none;
   background-color: #eef2f7;
   position: relative;
+  width: 100%;
   box-sizing: border-box;
   margin-bottom: 16px;
 }
@@ -295,23 +278,25 @@ button:active {
 
 .radio-items-wrapper {
   display: flex;
-  margin: auto;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   justify-content: space-between;
   margin-bottom: 11px;
+  box-sizing: border-box;
 }
 
 .form__item-radio {
   height: 66px;
   padding-right: 3%;
-  width: 48%;
+  width: 100% !important;
+  margin-bottom: 11px;
   display: flex;
   flex-direction: row;
   border-radius: 6px;
   align-items: center;
   align-content: center;
   border: solid 1px #dddfe0;
-  box-sizing: border-box;
 }
 
 .form__item-radio input {
@@ -320,10 +305,10 @@ button:active {
 
 .form__item-radio label {
   cursor: pointer;
-  height: 30px;
   width: 100%;
-  background-repeat: no-repeat;
+  height: 30px;
   background-position: right;
+  background-repeat: no-repeat;
   background-image: url(img/radio.svg);
 }
 
@@ -371,11 +356,14 @@ button:active {
   margin-left: auto;
 }
 
-.logo-mobile-svg {
+.header-logo-svg {
   display: none;
+}
+
+.logo-mobile-svg {
+  display: block !important;
 }
 
 .menu-svg {
-  display: none;
+  display: block !important;
 }
-
