--- a/07/04/main.css
+++ b/07/04/main.css
@@ -1,7 +1,64 @@
 body {
-  margin: auto;
+  background: #f5f5f5;
+  color: #4d4d4d;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
-a {
-  padding: 2px;
-  border: 1px solid black;
+.head {
+  text-align: center;
+}
+.container {
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.list {
+  margin: 10px 0 0;
+  background: white;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+  font-size: 14px;
+  list-style-type: none;
+  padding: 0;
+}
+.list__item {
+  display: block;
+  margin-bottom: 10px;
+}
+.list__item:hover {
+  background-color: lightyellow;
+}
+.repo {
+  padding: 10px 40px;
+  border-bottom: 1px solid #ededed;
+  cursor: pointer;
+  position: relative;
+}
+.repo__name {
+  display: block;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.repo__description {
+  display: block;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.repo__html_url {
+  display: block;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.repo__created_at {
+  display: block;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.repo__updated_at {
+  display: block;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
