--- a/07/04/main.less
+++ b/07/04/main.less
@@ -41,36 +41,14 @@ body {
   position: relative;
 }
 
-.repo__name {
-  display: block;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
+.repo-field-wrapper {
+  display: flex;
+  flex-direction: row;
 }
 
-.repo__description {
+.block {
   display: block;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
-
-.repo__html_url {
-  display: block;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
-
-.repo__created_at {
-  display: block;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
-
-.repo__updated_at {
-  display: block;
+  margin-left: 5px;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
