--- a/07/04/main.css
+++ b/07/04/main.css
@@ -32,32 +32,13 @@ body {
   cursor: pointer;
   position: relative;
 }
-.repo__name {
-  display: block;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
+.repo-field-wrapper {
+  display: flex;
+  flex-direction: row;
 }
-.repo__description {
+.block {
   display: block;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
-.repo__html_url {
-  display: block;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
-.repo__created_at {
-  display: block;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
-.repo__updated_at {
-  display: block;
+  margin-left: 5px;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
